# selection_generator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ReadMe.md  backward-test-v2.coffee  backward-test.coffee  build.rs  fixed-bench.coffee  fixed-test.coffee  log.md  plots.py  results.md  setup.sh  test_algorithms.sh  times.txt  times2.txt  times3.txt  times4.txt  times5.txt  times_backward.coffee  times_bidir.coffee  times_forward.coffee  timeswrong.txt  todo.md  wrong.coffee
doc/: backward-old.coffee  backward-test-v3.coffee  backward-test.coffee  backward-unterdunkel.coffee  backward.coffee  backward_14_6.coffee  bidirectional.coffee  forward.coffee  outputBackwardSearch.md  outputBackwardSearchMultiThreaded.md  outputBidirectionalSearch.md  outputBottomTop.md  outputForwardSearchBottomTop.md  outputForwardSearchTopBottom.md  theoreticalBounds.md
files/: linExt.h  selgen.c  selgen2.c  subgraph_iso_test.cpp
logs/: theoretical_bounds.coffee  theoretical_bounds.txt  times_backward_julius.coffee  times_backward_nekton.coffee  times_bidir_julius.coffee  times_forward_julius.coffee  times_forward_nekton.coffee
main/: build.rs
old_modules/: cache_tree.rs
rust_new/: Cargo.toml
rust_new/src/: cache_set.rs  cache_tree.rs  main.rs  poset.rs  search_backward.rs  search_bidirectional.rs  search_forward.rs  util.rs
src/: BS_thread_pool.hpp  Makefile  algorithm_merge.sh  algorithm_test.rs  algorithm_test_backward.rs  algorithm_test_prefix.txt  algorithm_test_suffix.txt  backwardSearch.cpp  backward_cache.rs  backwards_poset.rs  bidirectionalSearch.cpp  bitset.rs  cache.h  cache.rs  cache_Set.h  cache_Tree.h  cache_TreeSet.h  cache_new.h  cache_old.h  cache_set.h  cache_set.rs  cache_tree.h  cache_tree.rs  canonified_poset.rs  constants.rs  forwardSearch.cpp  free_poset.rs  linExt.h  (+24 more)
(+232 files in other folders)
