[package]
name = "rust_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
global_counter = "0.2.2"
hashbrown = "0.14.3"
nauty-Traces-sys = { version = "0.7.0", features = ["native"] }
rayon = "1.8"
