[package]
name = "selection_generator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
hashbrown = { version = "0.14.2" }
indicatif = "0.17.7"
nauty-Traces-sys = { version = "0.7.0", features = ["native"] }
chrono = "0.4.34"
rayon = "1.9.0"
priority-queue = "2.0.2"

[profile.release]
debug = true
lto = true
