[package]
name = "selection_generator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
hashbrown = { version = "0.14.2", features = ["rayon"] }
indicatif = "0.17.7"
nauty-Traces-sys = { version = "0.7.0", features = ["native"] }
chrono = "0.4.34"
rayon = "1.9.0"
global_counter = "0.2.2"
bincode = "1.3.3"
sysinfo = "0.30.12"

[profile.release]
debug = true
lto = true
codegen-units = 1
