[package]
name = "rust_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
const_for = "0.1.4"
nauty-Traces-sys = { version = "0.7.0", features = ["native"] }
threadpool = "1.8.1"
